--- a/app.css
+++ b/app.css
@@ -2,9 +2,12 @@
 html {
 	background-image: url(background_2.jpg);
 	background-size: 100%;
+	z-index: 0;
 }
+body
 
 /* Nav styles  */
+
 img#nav_logo {
 
 display: block;
@@ -39,7 +42,7 @@ float: left;
 	left: 0;
 	width: 100%;
 	height: 3px;
-	background: #fe435c98;
+	background: #f4ad16;
 	content: '';
 }
 .main_nav_item a
@@ -63,9 +66,37 @@ float: left;
 }
 .main_nav_item.active a
 {
-	color: #fe435b;
+	color: #f4ad16;
 }
 .main_nav_item:hover a
 {
-	color: #fe435b;
+	color: #f4ad16;
+}
+
+nav.navbar{
+	width: 75%;
+	margin-left: auto;
+	margin-right: auto;
+	background-color: #130a3599;
+	padding: 0px;
+}
+a.navbar-brand{
+	width: 20%
+}
+a.navbar-brand img#nav_logo{
+	width: 100%;
+	padding: 0px;
+}
+.main_nav_list{
+	width: 80%;
+
+}
+.main_nav_item {
+	width: 20%;
+}.main_nav_item a{
+	text-align: center;
+	font-size: 20px;
+	color: white;
+	padding: 0px;
+	line-height: 20px
 }
