--- a/app.css
+++ b/app.css
@@ -4,9 +4,7 @@ html {
 	background-size: 100%;
 	z-index: 0;
 	background-repeat: no-repeat;
-	
 }
-body
 
 /* Nav styles  */
 
@@ -105,7 +103,7 @@ a.navbar-brand img#nav_logo{
 }
 /* Slogan Styles */
 
-/* .home
+.home
 {
 	width: 100%;
 	height: 100vh;
@@ -120,8 +118,8 @@ a.navbar-brand img#nav_logo{
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
-} */
-.home_content
+}
+.slogan_content
 {
 	position: absolute;
 	top: 46%;
@@ -134,7 +132,7 @@ a.navbar-brand img#nav_logo{
 	width: 80%;
 	text-align: center;
 }
-.home_text_large
+.slogan_text_large
 {
 	font-size: 215px;
 	font-weight: 900;
@@ -143,7 +141,7 @@ a.navbar-brand img#nav_logo{
 	text-transform: uppercase;
 	line-height: 0.75;
 }
-.home_text_small
+.slogan_text_small
 {
 	position: absolute;
 	top: 50%;
