--- a/app.css
+++ b/app.css
@@ -13,7 +13,7 @@ html {
 }
 
 .home_background {
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -21,6 +21,10 @@ html {
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
+	 background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 /* Nav styles  */
