--- a/app.css
+++ b/app.css
@@ -344,7 +344,7 @@ a.sm-link:hover {
 	box-sizing: border-box;
 	width: 50px;
 	height: 50px;
-	border: 4px solid #ffffff;
+	border: 4px solid #fdaa27;
 	border-radius: 50%;
 	background: none;
 	color: #fff;
@@ -388,7 +388,7 @@ a.sm-link:hover {
 	position: absolute;
 	width: 20px;
 	height: 4px;
-	background-color: #fff;
+	background-color: #fdaa27;
 	-webkit-transform: rotate(45deg);
 	-ms-transform: rotate(45deg);
 	transform: rotate(45deg);
@@ -412,7 +412,7 @@ a.sm-link:hover {
 	height: 4px;
 	margin-top: -1px;
 	margin-left: -13px;
-	background-color: #fff;
+	background-color: #fdaa27;
 	-webkit-transform: rotate(45deg);
 	-ms-transform: rotate(45deg);
 	transform: rotate(45deg);
@@ -425,7 +425,7 @@ a.sm-link:hover {
 	position: absolute;
 	width: 27px;
 	height: 4px;
-	background-color: #fff;
+	background-color: #fdaa27;
 	margin-top: -1px;
 	margin-left: -13px;
 	cursor: pointer;
@@ -439,10 +439,10 @@ a.sm-link:hover {
 	padding: 0 40px 0 10px;
 	width: 300px;
 	height: 50px;
-	border: 4px solid #ffffff;
+	border: 4px solid #fdaa27;
 	border-radius: 0;
 	background: none;
-	color: #fff;
+	color: #FFFFFF;
 	font-family: 'Arvo', serif;
 	font-size: 16px;
 	font-weight: 400;
