--- a/app.css
+++ b/app.css
@@ -83,8 +83,7 @@ nav.navbar {
 	width: 75%;
 	margin-left: auto;
 	margin-right: auto;
-	background-color: rgb(19, 10, 53);
-	opacity: .5;
+	background-color: rgba(19, 10, 53, 0.461);
 	padding: 0px;
 }
 
@@ -351,7 +350,7 @@ a.sm-link:hover {
 	height: 50px;
 	border: 4px solid #fdaa27;
 	border-radius: 50%;
-	background: none;
+	background:none;
 	color: #fff;
 	font-size: 16px;
 	font-weight: 400;
@@ -446,7 +445,7 @@ a.sm-link:hover {
 	height: 50px;
 	border: 4px solid #fdaa27;
 	border-radius: 0;
-	background: none;
+	background: #00000079;
 	color: #FFFFFF;
 	font-family: 'Arvo', serif;
 	font-size: 16px;
