--- a/offers.css
+++ b/offers.css
@@ -1,4 +1,4 @@
-/* html styles */
+/* styles for the offers page  */
 html {
 	background-size: 100%;
 	z-index: 0;
@@ -11,7 +11,7 @@ html {
 }
 
 .home_background {
-	background-image: url(background_2.jpg);
+background-image: url(offers-background.jpg);
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -293,8 +293,6 @@ a.sm-link:hover {
 	transition-delay: 0s;
 }
 
-/*SETTINGS*/
-
 .sm-link {
 	--smLinkPadding: 10px 15px;
 	--smLinkLineWeight: 4px;
@@ -320,152 +318,4 @@ a.sm-link:hover {
 .section__item {
 	margin: auto;
 }
-
-/* Search icon */
-
-  #content {
-	position: fixed;
-	height: 50px;
-	width: 300px;
-	margin-left: 170px;
-	top: 90%;
-	left: 90%;
-	transform: translate(-50%, -50%);
-  }
-  
-  #content.on {
-	-webkit-animation-name: in-out;
-	animation-name: in-out;
-	-webkit-animation-duration: 0.7s;
-	animation-duration: 0.7s;
-	-webkit-animation-timing-function: linear;
-	animation-timing-function: linear;
-	-webkit-animation-iteration-count: 1;
-	animation-iteration-count: 1;
-  }
-  
-  input {
-	box-sizing: border-box;
-	width: 50px;
-	height: 50px;
-	border: 4px solid #fdaa27;
-	border-radius: 50%;
-	background:none;
-	color: #fff;
-	font-size: 16px;
-	font-weight: 400;
-	font-family: 'Arvo', serif;
-	outline: 0;
-	-webkit-transition: width 0.4s ease-in-out, border-radius 0.8s ease-in-out,
-	  padding 0.2s;
-	transition: width 0.4s ease-in-out, border-radius 0.8s ease-in-out,
-	  padding 0.2s;
-	-webkit-transition-delay: 0.4s;
-	transition-delay: 0.4s;
-	-webkit-transform: translate(-100%, -50%);
-	-ms-transform: translate(-100%, -50%);
-	transform: translate(-100%, -50%);
-  }
-  
-  .search {
-	background: none;
-	position: absolute;
-	top: 0px;
-	left: 0;
-	height: 50px;
-	width: 50px;
-	padding: 0;
-	border-radius: 100%;
-	outline: 0;
-	border: 0;
-	color: inherit;
-	cursor: pointer;
-	-webkit-transition: 0.2s ease-in-out;
-	transition: 0.2s ease-in-out;
-	-webkit-transform: translate(-100%, -50%);
-	-ms-transform: translate(-100%, -50%);
-	transform: translate(-100%, -50%);
-  }
-  
-  .search:before {
-	content: "";
-	position: absolute;
-	width: 20px;
-	height: 4px;
-	background-color: #fdaa27;
-	-webkit-transform: rotate(45deg);
-	-ms-transform: rotate(45deg);
-	transform: rotate(45deg);
-	margin-top: 26px;
-	margin-left: 17px;
-	-webkit-transition: 0.2s ease-in-out;
-	transition: 0.2s ease-in-out;
-  }
-  
-  .close {
-	-webkit-transition: 0.4s ease-in-out;
-	transition: 0.4s ease-in-out;
-	-webkit-transition-delay: 0.4s;
-	transition-delay: 0.4s;
-  }
-  
-  .close:before {
-	content: "";
-	position: absolute;
-	width: 27px;
-	height: 4px;
-	margin-top: -1px;
-	margin-left: -13px;
-	background-color: #fdaa27;
-	-webkit-transform: rotate(45deg);
-	-ms-transform: rotate(45deg);
-	transform: rotate(45deg);
-	-webkit-transition: 0.2s ease-in-out;
-	transition: 0.2s ease-in-out;
-  }
-  
-  .close:after {
-	content: "";
-	position: absolute;
-	width: 27px;
-	height: 4px;
-	background-color: #fdaa27;
-	margin-top: -1px;
-	margin-left: -13px;
-	cursor: pointer;
-	-webkit-transform: rotate(-45deg);
-	-ms-transform: rotate(-45deg);
-	transform: rotate(-45deg);
-  }
-  
-  .square {
-	box-sizing: border-box;
-	padding: 0 40px 0 10px;
-	width: 300px;
-	height: 50px;
-	border: 4px solid #fdaa27;
-	border-radius: 0;
-	background: #00000079;
-	color: #FFFFFF;
-	font-family: 'Arvo', serif;
-	font-size: 16px;
-	font-weight: 400;
-	outline: 0;
-	-webkit-transition: width 0.4s ease-in-out, border-radius 0.4s ease-in-out,
-	  padding 0.2s;
-	transition: width 0.4s ease-in-out, border-radius 0.4s ease-in-out,
-	  padding 0.2s;
-	-webkit-transition-delay: 0.4s, 0s, 0.4s;
-	transition-delay: 0.4s, 0s, 0.4s;
-	-webkit-transform: translate(-100%, -50%);
-	-ms-transform: translate(-100%, -50%);
-	transform: translate(-100%, -50%);
-  }
-
-/*  */
-  
-  /* footer styles */
-  footer {
-	background-color: #020c35;
-	color: #fff;
-  }
+/* section styles  */
