--- a/app.css
+++ b/app.css
@@ -465,11 +465,15 @@ a.sm-link:hover {
   /* footer styles */
   footer {
 	background-color: #1e1741;
-	color: #fff;
+	color: #7d8293;
+  }
+
+  footer div.col-lg-4{
+	  font-size: 12px;
   }
 
   .footerTitle{
 	  font-size: 24px;
 	  font-weight: 300;
-	  color: white;
+	  color: #ffffff;
   }
