--- a/app.css
+++ b/app.css
@@ -170,6 +170,11 @@ a.navbar-brand img#nav_logo {
 	text-shadow: 0px 11px 51px rgba(0, 0, 0, 0.35);
 }
 
+div.easyBreezy{
+	background-color: #19173f;
+	color: #FFFFFF;
+}
+
 /* funny nav styles */
 /* core styles */
 
