quality of life changes
removed and made spelling better

--- a/offers.css
+++ b/offers.css
@@ -366,7 +366,7 @@ div.formThird div select{
 	width: 100%;
 }
 
-input.offersFormInput#regSubmi {
+input.offersFormInput#regSubmit {
 	align-content: center;
 }
 div.offersFormButton {
