--- a/offers.css
+++ b/offers.css
@@ -103,8 +103,10 @@ a.navbar-brand img#nav_logo {
 }
 
 .main_nav_item {
-	width: 20%;
+	width: 15%;
+	float: left;
 }
+
 
 .main_nav_item a {
 	text-align: center;
@@ -115,6 +117,9 @@ a.navbar-brand img#nav_logo {
 	opacity: 1;
 }
 
+div.nav-subclass .main_nav_item{
+	float: right;
+}
 /* Slogan Styles */
 .home {
 	width: 100%;
